--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: blank # the website title (if blank, full name will be used instead)
 first_name: Elijah
 middle_name: Gaohan
 last_name: Ye
-email: elijah.gaohan.ye@gmail.com / gaohany2@illinois.edu
+email: elijah.gaohan.ye@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
